--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                                 <input type="text" class="form-control form-field" id="destination">
                               </div>
                               <div class="form-group">
-                                <label>First Train Time: HH:mm - military time</label>
+                                <label>First Train in military Time: HH:mm</label>
                                 <input type="text" class="form-control form-field" id="first-train">
                               </div>
                               <div class="form-group">
-                                <label>Frequency (min)</label>
+                                <label>Frequency in Minutes</label>
                                 <input type="text" class="form-control form-field" id="frequency">
                               </div>
             
